# task-scheduler

./: .editorconfig  .gitignore  README.md  project_plan.md  start.command  task_scheduler_design.md  wrangler.jsonc  wrangler.toml
backend/: .dockerignore  .env.example  Dockerfile  README.md  fly.toml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_users_and_oauth_credentials.py  0002_create_task_lists.py  0003_create_tasks.py  0004_create_user_settings.py  0005_add_ignore_all_day_events_to_user_.py  0006_create_optimizer_snapshots.py  0007_drop_weight_add_scheduled_end_reset_.py  0008_add_tasks_location_and_reset_user_.py  0009_add_tasks_scheduled_fragments.py  0010_add_scheduled_fixed_and_voluntary_visit.py  0011_create_event_log.py  c2cdf1ec6cbb_initial_empty.py
backend/app/: main.py
backend/app/api/: auth.py  calendar.py  deps.py  lists.py  optimize.py  settings.py  slots.py  tasks.py
backend/app/core/: config.py  crypto.py  database.py  time.py
backend/app/models/: __init__.py  base.py  event_log.py  oauth_credential.py  optimizer_snapshot.py  task.py  task_list.py  types.py  user.py  user_settings.py
backend/app/schemas/: auth.py  calendar.py  error.py  optimizer.py  settings.py  task.py  task_list.py
backend/tests/: conftest.py  test_buffer.py  test_calendar_api.py  test_calendar_writer.py  test_crypto.py  test_day_type.py  test_lists_api.py  test_optimizer.py  test_optimizer_service.py  test_settings_api.py  test_slot_generator.py  test_tasks_api.py  test_time.py  test_utc_datetime.py
docs/: api_cheatsheet.md  (+10 more)
(+68 files in other folders)
